Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5(EOL), 10.6(EOL), 10.11, 11.4, 11.7(EOL), 11.8
-
Not for ES Release Notes
-
Q4/2025 Server Maintenance
Description
Please see this comment for the problem description.
Attachments
Issue Links
- causes
-
MDEV-38474 Double free or corruption, ASAN heap-use-after-free in st_join_table::cleanup
-
- Closed
-
-
MDEV-38706 Double free or corruption, ASAN errors in st_join_table::cleanup
-
- Closed
-
- duplicates
-
MDEV-32519 main.brackets test crashes with --ps-protocol and enabled trace
-
- Closed
-
- relates to
-
MDEV-29124 ASAN errors in st_select_lex::print / With_element::print with optimizer trace on 2nd execution of PS
-
- Confirmed
-
-
MDEV-39209 use iterative cleanup for merged units to avoid stack overflow
-
- Closed
-